<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/first_frame_day"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- 미세먼지 상태 아이콘들 추가 -->
    <ImageView
        android:id="@+id/good_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/good_icon"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/moderate_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/moderate_icon"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/good_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/bad_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/bad_icon"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/moderate_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <!-- 미세먼지 상태 텍스트 -->
    <TextView
        android:id="@+id/air_quality_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/goorm_sans_bold"
        android:text="좋음"
        android:textColor="@color/blue"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <!-- 기존에 있던 미세먼지 농도 관련 텍스트 -->
    <TextView
        android:id="@+id/air_quality_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/goorm_sans_bold"
        android:text="미세먼지 농도"
        android:textColor="@color/blue"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/air_quality_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/goorm_sans_medium"
        android:text="24 µg/m³"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <!-- 옷 추천 버튼 -->
    <ImageView
        android:id="@+id/clothingRecommendationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:contentDescription="@string/clothing_recommendation"
        android:onClick="openClothingRecommendation"
        android:src="@drawable/cloth_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/foodRecommendationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/food_recommendation"
        android:onClick="openFoodRecommendation"
        android:src="@drawable/food_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clothingRecommendationButton" />

    <!-- 플레이리스트 버튼 -->
    <ImageView
        android:id="@+id/playlistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/playlist_button"
        android:contentDescription="@string/playlist"
        android:onClick="openPlaylist"
        app:layout_constraintTop_toBottomOf="@id/foodRecommendationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <!-- 지역별 날씨 버튼 -->
    <ImageView
        android:id="@+id/regionalWeatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/regional_weather"
        android:onClick="openRegionalWeather"
        android:src="@drawable/region_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
